# anneal

./: .gitignore  AML_MRD_DUPLEX_probes_hg38_sortd.bed  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SETUP_GUIDE.md  deploy.sh
mpileup_variant_caller/: Cargo.toml
mpileup_variant_caller/src/: main.rs
pipeline/: config.sh  launch_pipeline.sh  run_pipeline.sh  run_pipeline_batch.sh  stage1_consensus.sh  stage2_variant_calling.sh  stage3_annotate.sh
scripts/: annotate_variants.py  filter_variants.py  plot_family_sizes.py  validate_hgvs.py
src/: main.rs  manifest.rs
src/barcode/: extract.rs  mod.rs
src/consensus/: config.rs  cpu.rs  dcs.rs  mod.rs  pipeline.rs  sscs.rs
src/cuda/: consensus_kernel.cu  consensus_kernel.ptx  gpu.rs  kernels.rs  mod.rs
src/grouping/: families.rs  mod.rs
src/singleton/: correction.rs  mod.rs
src/utils/: mod.rs
